--- a/pipeline-backups/01-terraform-provision-aks-cluster-pipeline.yml
+++ b/pipeline-backups/01-terraform-provision-aks-cluster-pipeline.yml
@@ -1,20 +1,20 @@
 trigger:
-- master
+- main
 
 pool:
   vmImage: 'ubuntu-latest'
 
-# Define Variables for Environments
 variables:
 - name: DEV_ENVIRONMENT
-  value: dev
+  value: dev 
 - name: QA_ENVIRONMENT
-  value: qa  
+  value: qa 
 
 # Stage-1: Terraform Validate Stage
 ## Step-1: Publish Artifacts to Pipeline (Pipeline artifacts provide a way to share files between stages in a pipeline or between different pipelines. )
 ## Step-2: Install Latest Terraform (0.13.5) (Ideally not needed if we use default Ubuntu Agents)
 ## Step-3: Validate Terraform Manifests (terraform init, terraform validate)
+
 
 stages:
 - stage: TerraformValidate
@@ -22,34 +22,33 @@ stages:
     - job: TerraformValidateJob
       continueOnError: false
       steps:
-      - task: PublishPipelineArtifact@1
-        displayName: Publish Artifacts
-        inputs:
+       - task: PublishPipelineArtifact@1
+         displayName: Publish Artifacts
+         inputs:
           targetPath: '$(System.DefaultWorkingDirectory)/terraform-manifests'
           artifact: 'terraform-manifests-out'
           publishLocation: 'pipeline'
-      - task: TerraformInstaller@0
-        displayName: Terraform Install
-        inputs:
-          terraformVersion: 'latest'
-      - task: TerraformCLI@0
-        displayName: Terraform Init
-        inputs:
-          command: 'init'
-          workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
-          backendType: 'azurerm'
-          backendServiceArm: 'terraform-aks-azurerm-svc-con'
-          backendAzureRmResourceGroupName: 'terraform-storage-rg'
-          backendAzureRmStorageAccountName: 'terraformstatexlrwdrzs'
-          backendAzureRmContainerName: 'tfstatefiles'
-          backendAzureRmKey: 'aks-base.tfstate'
-          allowTelemetryCollection: false
-      - task: TerraformCLI@0
-        displayName: Terraform Validate
-        inputs:
-          command: 'validate'
-          workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
-          allowTelemetryCollection: false
+       - task: TerraformInstaller@0
+         displayName: Terraform Install
+         inputs:
+           terraformVersion: 'latest'
+       - task: TerraformCLI@0
+         displayName: Terraform Init
+         inputs:
+            command: 'init'
+            workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
+            backendType: 'azurerm'
+            backendServiceArm: 'terraform-aks-azurerm-svc-con'
+            backendAzureRmResourceGroupName: 'Capstonedemoniaz1'
+            backendAzureRmStorageAccountName: 'tstatestorageniaz'
+            backendAzureRmContainerName: 'tfstatefiles1'
+            backendAzureRmKey: 'aks-demo-one'
+            allowTelemetryCollection: false
+       - task: TerraformCLI@0
+         inputs:
+            command: 'validate'
+            workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
+            allowTelemetryCollection: false
 
 # Stage-2: Deploy Stages for Dev & QA
 # Deployment-1: Deploy Dev AKS Cluster
@@ -58,6 +57,7 @@ stages:
 ## Step-3: Terraform Initialize (State Storage to store in Azure Storage Account for Dev AKS Cluster)
 ## Step-4: Terraform Plan (Create Plan)
 ## Step-5: Terraform Apply (Use the plan created in previous step)
+# Define Variables
 
 - stage: DeployAKSClusters
   jobs:
@@ -65,13 +65,13 @@ stages:
       displayName: DeployDevAKSCluster
       pool:
         vmImage: 'ubuntu-latest'
-      environment: $(DEV_ENVIRONMENT)      
+      environment: $(DEV_ENVIRONMENT)
       strategy:
         runOnce:
           deploy:
-            steps:            
+            steps:
             - task: DownloadSecureFile@1
-              displayName: Download SSH Key
+              displayName: Download SSH key
               name: sshkey
               inputs:
                 secureFile: 'aks-terraform-devops-ssh-key-ububtu.pub'
@@ -82,9 +82,9 @@ stages:
                 workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
                 backendType: 'azurerm'
                 backendServiceArm: 'terraform-aks-azurerm-svc-con'
-                backendAzureRmResourceGroupName: 'terraform-storage-rg'
-                backendAzureRmStorageAccountName: 'terraformstatexlrwdrzs'
-                backendAzureRmContainerName: 'tfstatefiles'
+                backendAzureRmResourceGroupName: 'Capstonedemoniaz1'
+                backendAzureRmStorageAccountName: 'tstatestorageniaz'
+                backendAzureRmContainerName: 'tfstatefiles1'
                 backendAzureRmKey: 'aks-$(DEV_ENVIRONMENT).tfstate'
                 allowTelemetryCollection: false
             - task: TerraformCLI@0
@@ -102,7 +102,7 @@ stages:
                 workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
                 environmentServiceName: 'terraform-aks-azurerm-svc-con'
                 commandOptions: '$(Pipeline.Workspace)/terraform-manifests-out/$(DEV_ENVIRONMENT)-$(Build.BuildId).out'
-                allowTelemetryCollection: false
+                allowTelemetryCollection: false 
 
 # Stage-2: Deploy Stages for Dev & QA
 # Deployment-2: Deploy QA AKS Cluster
@@ -133,9 +133,9 @@ stages:
                 workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
                 backendType: 'azurerm'
                 backendServiceArm: 'terraform-aks-azurerm-svc-con'
-                backendAzureRmResourceGroupName: 'terraform-storage-rg'
-                backendAzureRmStorageAccountName: 'terraformstatexlrwdrzs'
-                backendAzureRmContainerName: 'tfstatefiles'
+                backendAzureRmResourceGroupName: 'Capstonedemoniaz1'
+                backendAzureRmStorageAccountName: 'tstatestorageniaz'
+                backendAzureRmContainerName: 'tfstatefiles1'
                 backendAzureRmKey: 'aks-$(QA_ENVIRONMENT).tfstate'
                 allowTelemetryCollection: false
             - task: TerraformCLI@0
