--- a/AKSForge-Pipeline.yml
+++ b/AKSForge-Pipeline.yml
@@ -174,7 +174,7 @@ stages:
     
     - task: Docker@2
       inputs:
-        containerRegistry: 'AKSForgeACR'
+        containerRegistry: 'AKSACR'
         repository: 'AKSForgeACRdemo'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
