--- a/AKSForge-Pipeline.yml
+++ b/AKSForge-Pipeline.yml
@@ -159,23 +159,17 @@ stages:
   jobs:  
   - job: Build
     displayName: Build job
+    pool:
+      name: Default
     steps:
-    - task: CopyFiles@2
+    - task: DockerInstaller@0
       inputs:
-        SourceFolder: '$(System.DefaultWorkingDirectory)/kube-manifests/'
-        Contents: |
-          deployment.yml
-          service.yml
-        TargetFolder: '$(Build.ArtifactStagingDirectory)'
-    - task: PublishBuildArtifacts@1
-      inputs:
-        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-        ArtifactName: 'drop'
-    
+        dockerVersion: '17.09.0-ce'
     - task: Docker@2
+      displayName: Build and publish image to Azure Container Registry
       inputs:
-        containerRegistry: 'AKSACR'
-        repository: 'AKSForgeACRdemo'
+        containerRegistry: 'AKSForgeSelfHostedAgentConn'
+        repository: 'AKSForgeACR'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
         tags: |
@@ -184,7 +178,9 @@ stages:
     - task: CopyFiles@2
       inputs:
         SourceFolder: '$(System.DefaultWorkingDirectory)kube-manifests\03-Windows-DotNet-Apps/'
-        Contents: 'deployment.yml service.yml'
+        Contents: |
+          deployment.yml 
+          service.yml
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
     - task: PublishBuildArtifacts@1
       inputs:
