--- a/AKSForge-Pipeline.yml
+++ b/AKSForge-Pipeline.yml
@@ -168,7 +168,7 @@ stages:
     - task: Docker@2
       displayName: Build and publish image to Azure Container Registry
       inputs:
-        containerRegistry: 'AKSForgeSelfHostedAgentConn'
+        containerRegistry: 'AKSACRMAnagedIdentity'
         repository: 'AKSForgeACR'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
