--- a/AKSForge-Pipeline.yml
+++ b/AKSForge-Pipeline.yml
@@ -5,10 +5,14 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-- name: DEV_ENVIRONMENT
-  value: dev 
-- name: QA_ENVIRONMENT
-  value: qa 
+  DEV_ENVIRONMENT: dev
+  QA_ENVIRONMENT:  qa 
+  dockerfilePath: $(System.DefaultWorkingDirectory)kube-manifests\03-Windows-DotNet-Apps/
+  tag: $(Build.BuildId)
+  dockerRegistryServiceConnection: aksforgecontainerregistry.azurecr.io
+  imageRepository: AKSRepo
+
+
 
 # Stage-1: Terraform Validate Stage
 ## Step-1: Publish Artifacts to Pipeline (Pipeline artifacts provide a way to share files between stages in a pipeline or between different pipelines. )
@@ -160,7 +164,7 @@ stages:
   - job: Build
     displayName: Build job
     pool:
-      vmImage: 'ubuntu-latest'
+      name: default
     steps:
     - task: DockerInstaller@0
       inputs:
@@ -168,22 +172,9 @@ stages:
     - task: Docker@2
       displayName: Build and publish image to Azure Container Registry
       inputs:
-        containerRegistry: 'ACRffff'
-        repository: 'AKSForgeACR'
         command: 'buildAndPush'
-        Dockerfile: '**/Dockerfile'
+        containerRegistry: '$(dockerRegistryServiceConnection)'
+        repository: $(imageRepository)
+        Dockerfile: $(dockerfilePath)
         tags: |
-          latest
-          $(Build.BuildId)
-    - task: CopyFiles@2
-      inputs:
-        SourceFolder: '$(System.DefaultWorkingDirectory)kube-manifests\03-Windows-DotNet-Apps/'
-        Contents: |
-          deployment.yml 
-          service.yml
-        TargetFolder: '$(Build.ArtifactStagingDirectory)'
-    - task: PublishBuildArtifacts@1
-      inputs:
-        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-        ArtifactName: 'AKSartifact'
-        publishLocation: 'Container'
+          $(tag)
