--- a/AKSForge-Pipeline.yml
+++ b/AKSForge-Pipeline.yml
@@ -9,7 +9,7 @@ variables:
   QA_ENVIRONMENT:  qa 
   dockerfilePath: $(System.DefaultWorkingDirectory)kube-manifests\03-Windows-DotNet-Apps/
   tag: $(Build.BuildId)
-  dockerRegistryServiceConnection: aksforgecontainerregistry.azurecr.io
+  dockerRegistryServiceConnection: terraform-aks-azurerm-svc-con
   imageRepository: AKSRepo
 
 
@@ -170,26 +170,11 @@ stages:
       inputs:
         dockerVersion: '17.09.0-ce'
     - task: Docker@2
-      displayName: 'Build Docker Image'
+      displayName: Build and publish image to Azure Container Registry
       inputs:
-        containerRegistry: 'ACRffff'
-        repository: '$(dockerRegistryServiceConnection)/$(imageRepository)'
-        command: 'build'
-        Dockerfile: '$(dockerfilePath)'
-        tags: '$(tag)'
-
-        # Log in to Azure Container Registry
-    - task: Docker@2
-      displayName: 'Log in to ACR'
-      inputs:
-            command: 'login'
-            containerRegistry: '$(dockerRegistryServiceConnection)'
-
-        # Push the Docker image to ACR
-    - task: Docker@2
-      displayName: 'Push Docker Image to ACR'
-      inputs:
-            command: 'push'
-            repository: $(dockerRegistryServiceConnection)/$(imageRepository)
-            tags: |
-              $(tag)
+        command: 'buildAndPush'
+        containerRegistry: '$(dockerRegistryServiceConnection)'
+        repository: $(imageRepository)
+        Dockerfile: $(dockerfilePath)
+        tags: |
+          $(tag)
