--- a/AKSForge-Pipeline.yml
+++ b/AKSForge-Pipeline.yml
@@ -1,5 +1,5 @@
 trigger:
-- main
+- none
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -39,12 +39,12 @@ stages:
             command: 'init'
             workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
             backendType: 'azurerm'
-            # backendServiceArm: 'terraform-aks-azurerm-svc-con'
-            # backendAzureRmResourceGroupName: 'Capstonedemoniaz1'
-            # backendAzureRmStorageAccountName: 'tstatestorageniaz'
-            # backendAzureRmContainerName: 'tfstatefiles1'
-            # backendAzureRmKey: 'aks-demo-one'
-            # allowTelemetryCollection: false
+            backendServiceArm: 'terraform-aks-azurerm-svc-con'
+            backendAzureRmResourceGroupName: 'Capstonedemoniaz1'
+            backendAzureRmStorageAccountName: 'tstatestorageniaz'
+            backendAzureRmContainerName: 'tfstatefiles1'
+            backendAzureRmKey: 'aks-demo-one'
+            allowTelemetryCollection: false
        - task: TerraformCLI@0
          inputs:
             command: 'validate'
